resolved text overflow to footer

--- a/angular-frontend-camp/src/app/footer/footer.component.css
+++ b/angular-frontend-camp/src/app/footer/footer.component.css
@@ -9,15 +9,14 @@
   font-family:'Arial';
   text-align: center;
   display:block;
-  width: -webkit-fill-available;
-  padding:0px;
+  
+  padding:10px;
   color: #000000;
-  margin: 0;
-  position: absolute;
-  bottom: 0;
+
   border: 1px solid rgba(0, 0, 0, 0.2);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
 
 /* Small devices (landscape phones, 544px and up) */
 @media (min-width: 544px) {
